--- a/src/app/professor/datail-professor/datail-professor.page.html
+++ b/src/app/professor/datail-professor/datail-professor.page.html
@@ -13,7 +13,7 @@
 <ion-content padding>
 
   <ion-card>
-    <ion-img src="/assets/myImg.png"></ion-img>
+    <ion-img [src]="professor.imagem"></ion-img>
     <ion-card-header>
       <ion-card-title>{{professor.name}}</ion-card-title>
     </ion-card-header>
@@ -24,4 +24,19 @@
     </ion-card-content>
   </ion-card>
 
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="ios-arrow-dropup"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+
+      <ion-fab-button>
+        <ion-icon name="ios-create" (click)="alterarProfessor(professor)"></ion-icon>
+      </ion-fab-button>
+
+      <ion-fab-button color="danger" (click)="deleteProfessor(professor)">
+        <ion-icon name="ios-close"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
 </ion-content>
