--- a/src/app/professor/list-professor/list-professor.page.html
+++ b/src/app/professor/list-professor/list-professor.page.html
@@ -8,15 +8,18 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-searchbar [(ngModel)]="filtro" placeholder="Procurar"></ion-searchbar>
+
   <ion-list>
-    <ion-item *ngFor="let professor of list?.items" (click)="professorDatail(professor)">
+    <ion-item *ngFor="let professor of list?.items | search: filtro" (click)="professorDatail(professor)">
       <ion-label>
         <h2>{{professor.name}}</h2>
+        <p></p>
       </ion-label>
     </ion-item>
   </ion-list>
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="redirecionarProfessor()">
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
