--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,16 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Bem Vindo</h3>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Trabalho</ion-card-subtitle>
+      <ion-card-title>Bem Vindo!</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      Trabalho da Disciplina de Ionic da Pós Graduação de Desenvolvimento de Aplicativos Moveis da UNIDAVI.
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
