--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -1,21 +1,31 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Acesse o Sistema</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <p *ngIf="mensagem">{{mensagem}}</p>
-  <form (ngSubmit)="submit()">
-    <ion-item>
-      <ion-label>Login</ion-label>
-      <ion-input type="email" name="email" class="form-control" [(ngModel)]="email"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label>Senha</ion-label>
-      <ion-input type="password" name="password" class="form-control" [(ngModel)]="senha"></ion-input>
-    </ion-item>
-    <ion-button type="submit" shape="block" color="primary">Login</ion-button>
-  </form>
-  <ion-button shape="block" color="primary" (click)="presentModal()">Esqueceu a senha?</ion-button>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>Infome o login e a senha</ion-card-subtitle>
+      <ion-card-title>Login</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <form (ngSubmit)="submit()">
+        <ion-item>
+          <ion-label>Login</ion-label>
+          <ion-input type="email" name="email" class="form-control" [(ngModel)]="email"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label>Senha</ion-label>
+          <ion-input type="password" name="password" class="form-control" [(ngModel)]="senha"></ion-input>
+        </ion-item>
+        <ion-button type="submit" shape="block" color="primary">Login</ion-button>
+      </form>
+      <ion-button shape="block" color="primary" (click)="presentModal()">Esqueceu a senha?</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
