--- a/src/app/configuracao/configuracao.page.html
+++ b/src/app/configuracao/configuracao.page.html
@@ -3,20 +3,18 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Home</ion-title>
+    <ion-title>Configuração</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
   <ion-card>
     <ion-card-header>
-      <ion-card-subtitle>Trabalho</ion-card-subtitle>
-      <ion-card-title>Bem Vindo!</ion-card-title>
+      <ion-card-title>Configuração</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
-      Trabalho da Disciplina de Ionic da Pós Graduação de Desenvolvimento de Aplicativos Moveis da UNIDAVI.
+      Tela de Configuracao
     </ion-card-content>
   </ion-card>
-
 </ion-content>
