--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu>
 
       <ion-header>
-        <ion-toolbar>
+        <ion-toolbar color="success">
           <ion-title>Menu</ion-title>
         </ion-toolbar>
       </ion-header>
@@ -12,13 +12,13 @@
         <ion-list>
           <ion-menu-toggle *ngFor="let p of appPages">
             <ion-item [routerLink]="p.url" [routerDirection]="'root'">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+              <ion-icon slot="start" [name]="p.icon" color="primary"></ion-icon>
               <ion-label>{{p.title}}</ion-label>
             </ion-item>
           </ion-menu-toggle>
           <ion-menu-toggle>
             <ion-item [routerDirection]="'root'" (click)="logout()">
-              <ion-icon slot="start" name="ios-log-out"></ion-icon>
+              <ion-icon slot="start" name="ios-log-out" color="primary"></ion-icon>
               <ion-label>Sair</ion-label>
             </ion-item>
           </ion-menu-toggle>
