--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="success">
     <ion-title>Acesse o Sistema</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -23,7 +23,7 @@
           <ion-label>Senha</ion-label>
           <ion-input type="password" name="password" class="form-control" [(ngModel)]="senha"></ion-input>
         </ion-item>
-        <ion-button type="submit" shape="block" color="primary">Login</ion-button>
+        <app-send-button textoDoBotao="Login"></app-send-button>
       </form>
       <ion-button shape="block" color="primary" (click)="presentModal()">Esqueceu a senha?</ion-button>
     </ion-card-content>
