--- a/src/app/professor/list-professor/list-professor.page.html
+++ b/src/app/professor/list-professor/list-professor.page.html
@@ -17,6 +17,13 @@
         <p></p>
       </ion-label>
     </ion-item>
+
+    <ion-infinite-scroll (ionInfinite)="loadMore($event)">
+      <ion-infinite-scroll-content
+              loadingSpinner="bubbles"
+              loadingText="Carregando...">
+      </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
   </ion-list>
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="redirecionarProfessor()">
